when creating a process to run the perl commands, we now use a ProcessBuilder so that we can merge error/output streams.